--- a/style.css
+++ b/style.css
@@ -10,6 +10,5 @@ body { background-color: #A9A9A9;}
   background-image: url("SUNSET.jpg");
 }
 
-#p {
-  text-length: 800px;
-}
+#p { text-length: 800px; }
+
